fix the overflow-x with hidden

--- a/spencer-wawaku/src/App.css
+++ b/spencer-wawaku/src/App.css
@@ -1174,6 +1174,7 @@ body {
   height: 100vh;
   margin: 1px;
   font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
