--- a/spencer-wawaku/src/sass/_resets.scss
+++ b/spencer-wawaku/src/sass/_resets.scss
@@ -16,5 +16,6 @@ body {
     height: 100vh;
     margin: 1px;
     font-family: 'Quicksand', sans-serif;
+    overflow-x: hidden;
 }
 
